--- a/bilibili-lite/src/v/index.styl
+++ b/bilibili-lite/src/v/index.styl
@@ -1,8 +1,12 @@
 @-moz-document url-prefix("https://www.bilibili.com/v/"),
 url-prefix("https://www.bilibili.com/anime/"),
 url-prefix("https://www.bilibili.com/guochuang/"),
-url-prefix("https://www.bilibili.com/cinema/") {
+url-prefix("https://www.bilibili.com/cinema/"),
+url-prefix("https://www.bilibili.com/documentary/"),
+url-prefix("https://www.bilibili.com/movie/"),
+url-prefix("https://www.bilibili.com/tv/") {
 	/* 分区主页样式 */
 	@import 'header'
 	@import 'base'
+	@import 'list'
 }
