--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -24,6 +24,7 @@
 .comment-bilibili-fold .comment-list .list-item .info
 .paging-box-big .page-jump
 .pager .jump-pager
+.bb-comment .no-more-reply, .comment-bilibili-fold .no-more-reply
 	color var(--c-text)
 
 .bb-comment .comment-header .tabs-order li.on
