--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -29,6 +29,7 @@
 	color var(--c-white) !important
 
 .international-header .mini-type .nav-search #nav_searchform
+.bili-header-m .nav-search #nav_searchform
 .van-popover .mini-type .nav-search #nav_searchform
 	border-color var(--c-border)
 	background-color var(--c-hover)
@@ -55,6 +56,7 @@
 .van-popper-avatar .counts
 .van-popper-avatar .links
 .van-popper-avatar .lang-change
+.van-popper-avatar .coins .contact .contact-tips
 	border-color var(--c-border) !important
 
 .van-popper-avatar .level-info .grade
@@ -64,24 +66,31 @@
 .name-line
 	color var(--c-title) !important
 
+.van-popper-avatar .coins .contact .email-icon
+.van-popper-history .tab-item
+	color var(--c-text) !important
+
 .van-popper-avatar .level-intro
 .lang-change .lang-intro
-	background var(--c-background) !important
+	background-color var(--c-background) !important
 	color var(--c-text) !important
 
 .van-popper-avatar .level-intro__link
+.van-popper-avatar .coins .contact .email-icon--bind
+.van-popper-avatar .coins .contact .phone-icon--bind
 	color var(--c-accent) !important
 
 .van-popper-avatar .links .link-item:hover
 .lang-change .lang-item:hover
 .lang-change .lang-intro-item:hover
-	background var(--c-hover) !important
+	background-color var(--c-hover) !important
 
 .lang-change .lang-intro-item.on
 	color var(--c-accent)
 
 .van-popper-avatar .logout a:hover
-	background var(--c-hover) !important
+.van-popper-avatar .coins .contact .contact-tips
+	background-color var(--c-hover) !important
 	color var(--c-title) !important
 
 /* 消息弹窗 */
@@ -261,7 +270,6 @@
 	background-color var(--c-hover)
 
 /* 顶部搜索框 */
-.bili-header-m .nav-search #nav_searchform
 .bili-header-m .bilibili-suggest
 .dynamic-m .wnd_bottom a
 .bili-header-m .mini-wnd-nav .read-more
