--- a/bilibili-lite/src/public/none.styl
+++ b/bilibili-lite/src/public/none.styl
@@ -34,6 +34,7 @@
 .v-wrap .activity-m
 .banner-card
 #slide_ad
-.video-page-game-card,
+.video-page-game-card
 .gg-floor-module
+.primary-menu .nav-menu li.home
 	display none
