--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -76,7 +76,6 @@
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar
 	background-color var(--c-background)
 
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
 .collection-m .title
 .collection-m .content .group-list .add-group .add-btn
 .collection-m .bottom
@@ -125,3 +124,7 @@
 
 .s_tag .btn-add span
 	background-color var(--c-text)
+
+.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
+	border-color var(--c-border)
+	background-color var(--c-hover)
