--- a/bilibili-lite/src/index.styl
+++ b/bilibili-lite/src/index.styl
@@ -1,7 +1,7 @@
 /*! ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.0.0-alpha.2
+@version        1.0.0-alpha.3
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/bilibili-lite
@@ -26,3 +26,4 @@
 @import 'video'
 @import 'live'
 @import 'message'
+@import 'read'
