--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -26,7 +26,7 @@
 	margin-left 12px !important
 	width auto !important
 	background transparent !important
-	color var(--c-white) !important
+	color var(--c-title) !important
 
 .international-header .mini-type .nav-search #nav_searchform
 .bili-header-m .nav-search #nav_searchform
@@ -185,6 +185,21 @@
 .van-popper-upload .upload-item:hover
 	background-color var(--c-hover) !important
 	color var(--c-title) !important
+
+/* 登陆弹窗 */
+.van-popper-login .vp-container
+	border-color var(--c-border) !important
+
+.van-popper-login .btn-box .btn.reg-btn
+.van-popper-login .btn-box .btn.reg-btn:hover
+.van-popper-login .btn-box .btn
+.van-popper-login .btn-box .btn:hover
+	border-color var(--c-accent) !important
+	background-color var(--c-accent) !important
+	color var(--c-white) !important
+
+.van-popper-login .lang-change
+	border 0
 
 /* 顶部导航--分区 */
 .bili-header-m
