fix: styles error

--- a/bilibili-lite/src/home/header.styl
+++ b/bilibili-lite/src/home/header.styl
@@ -1,6 +1,6 @@
 /* 头部 */
 .mini-header
-	background var(--c-bg-header)
+	background-color var(--c-bg-header)
 	backdrop-filter blur(5px)
 
 /* 搜索框 */
@@ -22,7 +22,7 @@
 .international-home .international-header .nav-search #nav_searchform
 	padding 0 60px 0 20px
 	border 0
-	background rgba(0, 0, 0, 0.4)
+	background-color rgba(0, 0, 0, 0.4)
 
 .international-home .bili-header-m .nav-search .nav-search-keyword
 .international-home .international-header .nav-search .nav-search-keyword
@@ -54,7 +54,7 @@
 .international-home .international-header .nav-search .nav-search-btn
 	width 60px
 	height 50px
-	background rgba(0, 0, 0, 0.6)
+	background-color rgba(0, 0, 0, 0.6)
 
 .international-home .bili-header-m .nav-search .nav-search-btn:hover
 .international-home .international-header .nav-search .nav-search-btn:hover
@@ -63,7 +63,7 @@
 .bilibili-search-suggest
 .bilibili-search-history
 	border-color var(--c-border)
-	background var(--c-background)
+	background-color var(--c-background)
 
 .bilibili-search-suggest .suggest-item.focus
 .bilibili-search-suggest .suggest-item:hover
@@ -86,7 +86,7 @@
 	background-color var(--c-background) !important
 
 .bili-banner .taper-line
-	background none !important
+	background-color none !important
 
 .bili-banner
 	height 14vw !important
