--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -1,9 +1,9 @@
 /* 全局样式 */
 html
-	background var(--c-background)
+	background-color var(--c-background)
 
 body
-	background var(--c-background)
+	background-color var(--c-background)
 	overflow-x hidden
 	color var(--c-text)
 
