--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -25,7 +25,7 @@
 .mini-upload
 	margin-left 12px !important
 	width auto !important
-	background transparent !important
+	background-color transparent !important
 	color var(--c-title) !important
 
 .international-header .mini-type .nav-search #nav_searchform
@@ -41,7 +41,7 @@
 /* 弹窗 */
 .van-popover
 	border-color var(--c-border)
-	background var(--c-background)
+	background-color var(--c-background)
 
 .van-popper .popper__arrow
 	border-width 0
@@ -99,7 +99,7 @@
 	background-color var(--c-background) !important
 
 .im-list-box
-	background var(--c-background)
+	background-color var(--c-background)
 
 .im-root a
 .im-root a:hover
