--- a/bilibili-lite/src/read/home.styl
+++ b/bilibili-lite/src/read/home.styl
@@ -76,13 +76,13 @@
   padding 0 30px 0 10px
   width 500px
   border-color var(--c-border)
-  background var(--c-hover)
+  background-color var(--c-hover)
 
 .page-content .right-side .search-module .search-block input
   margin 0
   width 100%
   height 100%
-  background transparent
+  background-color transparent
   color var(--c-title)
 
 .page-content .right-side .more
