--- a/bilibili-lite/src/v/header.styl
+++ b/bilibili-lite/src/v/header.styl
@@ -4,7 +4,7 @@
 
 .bili-header-m .nav-menu .nav-mask
 	border 0
-	background var(--c-bg-header)
+	background-color var(--c-bg-header)
 	backdrop-filter blur(5px)
 
 .bili-header-m .nav-menu .blur-bg
