--- a/bilibili-lite/src/video/danmaku.styl
+++ b/bilibili-lite/src/video/danmaku.styl
@@ -2,7 +2,6 @@
 .bui-collapse .bui-collapse-wrap
 	border 1px solid var(--c-border)
 	border-radius 2px
-	overflow hidden
 
 .player-auxiliary-area
 .bui-collapse .bui-collapse-header
@@ -48,3 +47,7 @@
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-list .danmaku-info-row .danmaku-info-report-btn:hover
 	background-color var(--c-accent)
 	color var(--c-white)
+
+.bui-button.bui-button-gray2:hover
+	background-color var(--c-hover)
+	color var(--c-text)
