--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -4,6 +4,10 @@
 
 .collection-m
 .coin-operated-m
+.open-dialog-masker .open-dialog-content
+.main-container .media-info .media-right .media-tool-bar .btn-rating:hover
+.short-review-masker .short-review-content
+.main-container .pay-bar .vip .btn-pay
 	background-color var(--c-background)
 
 .video-info .video-title
@@ -19,6 +23,17 @@
 .user-card-m .info .user .name
 .multi-page .head-con h3
 .multi-page .cur-list .list-box li a
+.main-container .media-info .media-right .media-title
+.up-info>a .up-name
+.main-container .review-module .module-title
+.main-container .review-module .review-list .review-item .review-title
+.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-title
+.open-dialog-masker .open-dialog-content .__dialog-header p
+.open-dialog-masker .open-dialog-content .open-body p
+.main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list li
+.review-edit-header .review-edit-media-info h4
+.main-container .ep-list-wrapper .list-title h4
+.ep-section-module .section-title
 	color var(--c-title)
 
 .video-info .video-data
@@ -44,6 +59,43 @@
 .multi-page .head-con .range-box i
 .multi-page .head-con .range-box .cur-page
 .video-desc .btn span
+.main-container .tool-bar .coin-info i
+.main-container .tool-bar .coin-info span
+.main-container .tool-bar .share-info i
+.main-container .tool-bar .share-info span
+.main-container .tool-bar .mobile-info i
+.main-container .tool-bar .mobile-info span
+.main-container .media-info .media-right .media-count
+.main-container .media-info .media-right .pub-wrapper .home-link
+.main-container .media-info .media-right .pub-wrapper
+.main-container .media-info .media-right .pub-wrapper .av-link
+.up-info .btn-follow-up
+.main-container .media-info .media-right .media-desc
+.main-container .media-info .media-right .media-rating p
+.main-container .review-module .module-title .more-link
+.main-container .review-module .review-list .review-item .review-header .review-author
+.main-container .review-module .review-list .review-item .review-content
+.main-container .review-module .review-list .review-item .pub-time
+.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-count
+.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-uper
+.main-container .media-info .media-right .media-tool-bar .btn-rating .star-wrapper li i
+.open-dialog-masker .open-dialog-content .open-body ul li span
+.open-dialog-masker .open-dialog-content .open-footer .open-agree
+.main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list li.disabled
+.short-review-masker .short-review-content .dialog-close
+.review-edit-header .review-edit-media-info .rate-tip
+ul.rate-star li i
+.short-review-masker .short-review-content .mr-long-review
+.main-container .ep-list-wrapper .list-title .mode-change
+.main-container .ep-list-wrapper .list-title .ep-list-progress
+.ep-list-wrapper .ep-item
+.section-ep-wrapper .ep-item
+.ep-list-wrapper .ep-item.visited
+.ep-list-wrapper .ep-item:visited
+.section-ep-wrapper .ep-item.visited
+.section-ep-wrapper .ep-item:visited
+.ep-list-wrapper .ep-item i
+.section-ep-wrapper .ep-item i
 	color var(--c-text)
 
 .bilibili-player
@@ -64,8 +116,24 @@
 .recommend-list .rec-footer
 .video-info .video-title .activity
 .multi-page .cur-list .module-box li.on
+.main-container .recom-wrapper .expand-more
+.float-nav .nav-menu .backup
+.float-nav .nav-menu .item:hover
+.main-container .nav-tools .tool-item
+.main-container .nav-tools .tool-item:hover
+.open-dialog-masker .open-dialog-content .open-footer .btn-normal.confirm
+.open-dialog-masker .open-dialog-content .open-footer .btn-normal.confirm:hover
+.open-dialog-masker .open-dialog-content .open-footer .btn-normal
+.open-dialog-masker .open-dialog-content .open-footer .btn-normal:hover
+.main-container .media-info .media-right .media-tool-bar .btn-follow
+.main-container .media-info .media-right .media-tool-bar .btn-follow:hover
+.main-container .media-info .media-right .media-tool-bar .btn-follow.active
+.short-review-masker .short-review-content .review-body-wrap .mr-btn.active
+.short-review-masker .short-review-content .review-body-wrap .mr-btn.active:hover
+.ep-list-wrapper .ep-item .badge.pink
+.section-ep-wrapper .ep-item .badge.pink
 	border-color var(--c-accent)
-	background-color var(--c-accent)
+	background-color var(--c-accent) !important
 	color var(--c-white)
 
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active .bp-svgicon
@@ -79,6 +147,9 @@
 .multi-page
 .player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap
 .multi-page .cur-list .module-box li
+.main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list
+.main-container .ep-list-wrapper
+.ep-section-module
 	border 1px solid var(--c-border)
 	background-color var(--c-background)
 
@@ -90,6 +161,11 @@
 
 .multi-page .cur-list .list-box li.on
 .multi-page .cur-list .list-box li:hover
+.main-container .review-module .review-list .review-item .review-body
+.ep-list-wrapper .ep-item:hover
+.section-ep-wrapper .ep-item:hover
+.ep-list-wrapper .ep-item.cursor
+.section-ep-wrapper .ep-item.cursor
 	background-color var(--c-hover)
 
 .collection-m .title
@@ -99,6 +175,10 @@
 .v-wrap .s_tag
 .tag-info-pane .btn-right-box
 .user-card-m
+.main-container .media-info
+.main-container .review-module
+.main-container .plp-l .comment-wrapper
+.open-dialog-masker .open-dialog-content .__dialog-header
 	border-color var(--c-border)
 
 .video-toolbar .ops>span.on
@@ -112,6 +192,15 @@
 .bili-header-m .bilibili-suggest .suggest-item .suggest_high_light
 .multi-page .cur-list .list-box li.on>a
 .video-desc .btn span:hover
+.up-info>a .up-name.vip
+.main-container .media-info .media-right .media-rating .score
+.main-container .review-module .module-title .more-link:hover
+.main-container .review-module .review-list .review-item .review-header .review-star li i.icon-star-full
+.open-dialog-masker .open-dialog-content .open-footer .open-agree i.icon-chk-full
+.open-dialog-masker .open-dialog-content .open-footer .open-agree a
+ul.rate-star li i.icon-hover
+ul.rate-star li i.icon-star-full
+.review-edit-header .review-edit-media-info .rate-wrap .is-coin
 	color var(--c-accent)
 
 .is-vip
@@ -124,28 +213,39 @@
 .video-toolbar .ops .share .share-pos .share-address ul li input
 .more-ops-list
 .s_tag .ipt
+.main-container .media-info .media-right .media-desc i
+.main-container .pay-bar .vip .btn-pay.active
 	border-color var(--c-border)
-	background-color var(--c-background)
+	background-color var(--c-background) !important
 	color var(--c-text)
 
 .coin-operated-m .mc-box
 	border 0
 	background-color var(--c-white)
 
+.main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list li:hover
+	background-color var(--c-hover)
+	color var(--c-title)
+
 .more-ops-list li:hover
 	background-color var(--c-hover)
 	color var(--c-text)
 
-.s_tag .tag-area>li
-.s_tag .btn-add
-.multi-page .cur-list .module-box li:hover
+.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item.visited
+.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item:visited
+.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item
 	border-color var(--c-border)
-	background-color var(--c-hover)
+	background-color var(--c-background)
+	color var(--c-text)
 
 .s_tag .btn-add span
 	background-color var(--c-text)
 
+.s_tag .tag-area>li
+.s_tag .btn-add
+.multi-page .cur-list .module-box li:hover
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
+.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item:hover
 	border-color var(--c-border)
 	background-color var(--c-hover)
 
@@ -173,3 +273,30 @@
 .members-info .up-card .attention--not
 	background-color var(--c-accent) !important
 	color var(--c-white) !important
+
+.main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
+	background-color var(--c-border)
+
+.main-container .media-info .media-right .media-tool-bar .btn-rating
+	border 0
+	background-color var(--c-background)
+	color var(--c-text)
+
+.open-dialog-masker .open-dialog-content .open-body ul li i.icon-complete
+	border-color var(--c-accent)
+	color var(--c-accent)
+
+.short-review-masker .short-review-content .review-body-wrap
+	height auto
+	border 0
+
+.short-review-masker .short-review-content .review-body-wrap textarea
+	padding 10px
+	height 120px
+	background-color var(--c-hover)
+	color var(--c-title)
+
+.short-review-masker .short-review-content .review-body-wrap span.tip
+	bottom 10px
+	right 20px
+	color var(--c-text) !important
