--- a/bilibili-lite/src/public/none.styl
+++ b/bilibili-lite/src/public/none.styl
@@ -37,4 +37,8 @@
 .video-page-game-card
 .gg-floor-module
 .primary-menu .nav-menu li.home
+.main-container .entry-old
+.main-container .nav-tools .tool-item.mini
+.main-container .nav-tools a
+.main-container .pay-bar .vip .img-icon
 	display none
