--- a/bilibili-lite/src/video/index.styl
+++ b/bilibili-lite/src/video/index.styl
@@ -1,4 +1,5 @@
-@-moz-document url-prefix("https://www.bilibili.com/video/") {
+@-moz-document url-prefix("https://www.bilibili.com/video/"),
+url-prefix("https://www.bilibili.com/bangumi/play/") {
 	/* 视频播放界面样式 */
 	@import 'base'
 	@import 'danmaku'
